@@ -4,6 +4,7 @@ system = Debian
 virtualizer = Virt
 verbose = 1
 wait = 0
+auto-snapshot = 0
 
 [paths]
 images = /var/tmp/anste-images
