@@ -1,4 +1,5 @@
 HEAD
+    + Added auto-snapshot for -break and -step modes
     + Show current test index and total tests
     + Now symlinks are dereferenced when tranfering the files to the slaves
     + Added deploy/auto-update config key to enable/disable the auto-update
